--- a/greensource_pages/templates/greensource_pages/about.html
+++ b/greensource_pages/templates/greensource_pages/about.html
@@ -55,81 +55,75 @@
         </div>
     </div>
     <div class="container padding">
-        <div class="mission row owl-carousel owl-theme padding" id="mission">
-            <div class="item">
-                <div class="values">
-                    <h4>Mission</h4>
-                    <p>Our mission is to promote renewable energy technologies,
-                    energy efficiency and sustainable energy that benefits everyone.</p>
+        <div class="card-cover row padding">
+                <div class="card">
+                    <div class="face face1">
+                        <div clas="content">
+                            <p>Our mission is to promote renewable energy technologies,
+                            energy efficiency and sustainable energy that benefits everyone.</p>
+                        </div>
+                    </div>
+                    <div class="face face2">
+                        <h2>mission</h2>
+                    </div>
                 </div>
-            </div>
-            <div class="item">
-                <div class="values">
-                    <h4>Core Values</h4>
-                    <ul class="create">
-                        <li>Customer Centric</li>
-                        <li>Reliability</li>
-                        <li>Integrity</li>
-                        <li>Teamwork</li>
-                        <li>Education</li>
-                    </ul>
+                <div class="card">
+                    <div class="face face1">
+                        <div clas="content">
+                            <ul class="create">
+                                <li>Customer Centric</li>
+                                <li>Reliability</li>
+                                <li>Integrity</li>
+                                <li>Accountability</li>
+                                <li>Teamwork</li>
+                                <li>Education</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="face face2">
+                        <h2>values</h2>
+                    </div>
                 </div>
-            </div>
-            <div class="item">
-                <div class="values">
-                    <h4>Vision</h4>
-                    <p>Our vision is to build a sustainable energy future, providing solutions to manage energy and environmental
-                        sustainability</p>
+                <div class="card">
+                    <div class="face face1">
+                        <div clas="content">
+                            <p>Our vision is to build a sustainable energy future, providing solutions to manage energy and environmental
+                                sustainability</p>
+                        </div>
+                    </div>
+                    <div class="face face2">
+                        <h2>vision</h2>
+                    </div>
                 </div>
-            </div>
         </div>
     </div>
 </section>
 <div class="container-fluid padding">
     <div class="service col-12">
-        <h5>How We Work</h5>
+        <h5>What We do</h5>
         <hr />
-        <p>How we execute our solar projects</p>
+        <p>Our Work Flow Process</p>
     </div>
     <div class="row work-mode padding">
         <div class="working col-xs-12 col-md-6 col-lg-3">
-            <i class="fas fa-arrow-alt-circle-right"></i>
-            <h5>01
-                <span class="subscript">step</span>
-            </h5>
-            <h6>Request a Meeting</h6>
-            <p>We schedule appointment with clients to discuss thier energy needs by filing our contact-form or through our
-                phone numbers. </p>
+            <i class="fas fa-line-chart"></i>
+                <h4>Analysis</h4>
+                <p>we carry out load analysis to dertermine the best solar option that fits individual clients</p>
         </div>
         <div class="working col-xs-12 col-md-6 col-lg-3">
-            <i class="fas fa-arrow-alt-circle-right"></i>
-            <h5>02
-                <span class="subscript">step</span>
-            </h5>
-            <h6>Site Survey</h6>
-            <p>The site is inspected to ensure safety and considerations for the installation of all components are accounted
-                for.
-            </p>
+            <i class="fas fa-cogs"></i>
+                <h4>Engineering</h4>
+                <p>We believe standard engineering procedure ensure quality assurance during installations</p>
         </div>
         <div class="working col-xs-12 col-md-6 col-lg-3">
-            <i class="fas fa-arrow-alt-circle-right"></i>
-            <h5>03
-                <span class="subscript">step</span>
-            </h5>
-            <h6>Energy Audit</h6>
-            <p>Load analysis is carried out for the site to be powered to determine its energy needs, this forms the basis of
-                the design specification.
-            </p>
+            <i class="fas fa-puzzle-piece"></i>
+                <h4>Operation</h4>
+                <p>Standard operations procedure are designed to ensure our solar systems performs optimally</p>
         </div>
         <div class="working col-xs-12 col-md-6 col-lg-3">
-            <i class="fas fa-arrow-alt-circle-right"></i>
-            <h5>04
-                <span class="subscript">step</span>
-            </h5>
-            <h6>Executing Project</h6>
-            <p>Our project are delivered by our team of professional engineers. Also our client will be able to see thier project
-                progress.
-            </p>
+            <i class="fas fa-tools"></i>
+                <h4>Maintenance</h4>
+                <p>Planned Maintenance and retrofit makes the life span of any system last longer than expected</p>
         </div>
     </div>
 </div>
