--- a/templates/base_layout.html
+++ b/templates/base_layout.html
@@ -234,10 +234,10 @@
                             <p>1, Heritage street by anobi Noah, arogun Mowe-Ofada Ogun.</p>
                         </li>
                         <li>
-                            <a href='&#115;&#117;&#112;&#112;&#111;&#114;&#116;&#064;&#103;&#114;&#101;&#101;&#110;&#115;&#111;&#117;&#114;&#099;&#101;&#110;&#101;&#114;&#103;&#121;&#046;&#099;&#111;&#109;'>&#115;&#117;&#112;&#112;&#111;&#114;&#116;&#064;&#103;&#114;&#101;&#101;&#110;&#115;&#111;&#117;&#114;&#099;&#101;&#110;&#101;&#114;&#103;&#121;&#046;&#099;&#111;&#109;</a>
+                            <span><a href='&#115;&#117;&#112;&#112;&#111;&#114;&#116;&#064;&#103;&#114;&#101;&#101;&#110;&#115;&#111;&#117;&#114;&#099;&#101;&#110;&#101;&#114;&#103;&#121;&#046;&#099;&#111;&#109;'>&#115;&#117;&#112;&#112;&#111;&#114;&#116;&#064;&#103;&#114;&#101;&#101;&#110;&#115;&#111;&#117;&#114;&#099;&#101;&#110;&#101;&#114;&#103;&#121;&#046;&#099;&#111;&#109;</a></span>
                         </li>
                         <li>
-                            <p>0913 2909 546 |&nbsp;0807 6068 609</p>
+                            <p><span>0913 2909 546 |&nbsp;0807 6068 609</span></p>
                         </li>
                     </ul>
                     <h3>Follow us</h3>
