--- a/greensource_pages/templates/greensource_pages/index.html
+++ b/greensource_pages/templates/greensource_pages/index.html
@@ -8,7 +8,7 @@ for Homes and Businesses {{ block.super }}{% endblock %} {% block content %}
     </ol>
     <div class="carousel-inner">
         <div class="carousel-item active">
-            <img src="{% static 'images/aa.jpg' %}" alt="off-grid solar panels">
+            <img src="{% static 'images/homepage1.jpg' %}" alt="off-grid solar panels">
             <div class="carousel-caption">
                 <h1 class="animated zoomIn">MAKE THE
                     <span>SUN</span> WORK FOR YOU</h1>
@@ -20,7 +20,7 @@ for Homes and Businesses {{ block.super }}{% endblock %} {% block content %}
             </div>
         </div>
         <div class="carousel-item">
-            <img src="{% static 'images/aaa.jpg' %}" alt="array of ground mounted solar panels ">
+            <img src="{% static 'images/homepage2.jpg' %}" alt="array of ground mounted solar panels ">
             <div class="carousel-caption">
                 <h2 class="animated zoomIn">CLEAN.
                     <span>SAFE.</span> RENEWABLE.</h2>
@@ -32,7 +32,7 @@ for Homes and Businesses {{ block.super }}{% endblock %} {% block content %}
             </div>
         </div>
         <div class="carousel-item">
-            <img src="{% static 'images/a.jpg' %}" alt="office space powered by a solar system">
+            <img src="{% static 'images/homepage3.jpg' %}" alt="office space powered by a solar system">
             <div class="carousel-caption">
                 <h2 class="animated zoomIn">
                     <span>GREEN</span> ENERGY FOR EVERYONE</h2>
@@ -406,7 +406,7 @@ for Homes and Businesses {{ block.super }}{% endblock %} {% block content %}
                 <img src="{% static 'images/brand-1-4.png' %}" alt="img" />
             </div>
             <div class="item">
-                <img src="{% static 'images/brand-1-5.png' %}" alt="img" />
+                <img src="{% static 'images/brand-1-6.png' %}" alt="img" />
             </div>
         </div>
     </div>
